<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="match_parent"
   android:layout_height="match_parent">
   
    <TextView
        android:id="@+id/TextViewCalculatorDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" />
    
   <TableLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content" >
       
       <TableRow
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
			<Button 
			  android:id="@+id/Button1"
			  android:text="@string/button_1_text"
			  android:layout_height="wrap_content"
			  android:layout_width="0dp"
			  android:layout_weight="1" />
			<Button 
			  android:id="@+id/Button2"
			  android:text="@string/button_2_text"
			  android:layout_height="wrap_content"
			  android:layout_width="0dp"
			  android:layout_weight="1" />
			<Button 
			  android:id="@+id/Button3"
			  android:text="@string/button_3_text"
			  android:layout_height="wrap_content"
			  android:layout_width="0dp"
			  android:layout_weight="1" />
       </TableRow>
       <TableRow
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
			<Button 
			  android:id="@+id/Button4"
			  android:text="@string/button_4_text"
			  android:layout_height="wrap_content"
			  android:layout_width="0dp"
			  android:layout_weight="1" />
			<Button 
			  android:id="@+id/Button5"
			  android:text="@string/button_5_text"
			  android:layout_height="wrap_content"
			  android:layout_width="0dp"
			  android:layout_weight="1" />
			<Button 
			  android:id="@+id/Button6"
			  android:text="@string/button_6_text"
			  android:layout_height="wrap_content"
			  android:layout_width="0dp"
			  android:layout_weight="1" />
       </TableRow>
       <TableRow
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
			<Button 
			  android:id="@+id/Button7"
			  android:text="@string/button_7_text"
			  android:layout_height="wrap_content"
			  android:layout_width="0dp"
			  android:layout_weight="1" />
			<Button 
			  android:id="@+id/Button8"
			  android:text="@string/button_8_text"
			  android:layout_height="wrap_content"
			  android:layout_width="0dp"
			  android:layout_weight="1" />
			<Button 
			  android:id="@+id/Button9"
			  android:text="@string/button_9_text"
			  android:layout_height="wrap_content"
			  android:layout_width="0dp"
			  android:layout_weight="1" />
       </TableRow>
       <Button 
			  android:id="@+id/Button0"
			  android:text="@string/button_0_text"
			  android:layout_height="wrap_content"
			  android:layout_width="match_parent"
			  android:layout_weight="0" />
       
   </TableLayout>
    
</LinearLayout>